# MoneyShark

./: CMakeLists.txt  appstyle.cpp  appstyle.h  connectiondialog.cpp  connectiondialog.h  creditcalculator.cpp  creditcalculator.h  creditdialog.cpp  creditdialog.h  database.cpp  database.h  deploy_windows.bat  depositcalculator.cpp  depositcalculator.h  financemanager.cpp  financemanager.h  financewidget.cpp  financewidget.h  logindialog.cpp  logindialog.h  logo.cpp  logo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h  moneysharkserver.cpp  moneysharkserver.h  networkclient.cpp  networkclient.h  ratesprovider.cpp  ratesprovider.h  run_client.bat  run_server.bat  servermain.cpp  statisticswidget.cpp  statisticswidget.h
